--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,9 @@ name: CI/CD Pipeline
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
 
 jobs:
-  test-and-build:
+  test-build-deploy:
     runs-on: ubuntu-latest
     
     steps:
@@ -44,6 +42,17 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/task-api:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/task-api:${{ github.sha }}
           cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/task-api:latest
           cache-to: type=inline
+      
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/task-api:latest
+            docker stop task-api || true
+            docker rm task-api || true
+            docker run -d -p 8000:8000 --name task-api --restart unless-stopped ${{ secrets.DOCKERHUB_USERNAME }}/task-api:latest
