--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,17 +49,14 @@ jobs:
           cache-to: type=inline
       
       - name: Deploy to EC2
-        if: github.ref == 'refs/heads/main' && success()
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            set -e
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/task-api:latest
             docker stop task-api || true
             docker rm task-api || true
             docker run -d -p 8000:8000 --name task-api --restart unless-stopped ${{ secrets.DOCKERHUB_USERNAME }}/task-api:latest
-            sleep 2
-            docker ps | grep task-api || exit 1
+            docker image prune -af --filter "until=24h"
